From scratch grid work for image#_1

--- a/index.html
+++ b/index.html
@@ -12,10 +12,15 @@
     
 <div id="container">
 
+   <a href = https://github.com/C2rli3/module1_day3.git>
+
+  
    <header id="header">
 
       Welcome: Click below or anywhere on aqua for Github page.
    </header>
+
+</a>
 
    <main id="main">
 
@@ -31,7 +36,7 @@
 <div class="children">
 
    <p>
-      Link 1 <a href="inspi2.html">
+      Link 2 <a href="inspi2.html">
       <img border="0" alt="Inspi_2" src="inspi2.png" width="100" height="100">
       </a>
       </p>
@@ -40,7 +45,7 @@
 <div class="children">
 
    <p>
-      Link 1 <a href="inspi3.html">
+      Link 3<a href="inspi3.html">
       <img border="0" alt="Inspi_3" src="inspi3.png" width="100" height="100">
       </a>
       </p>
