final push, complete

--- a/inspi3.html
+++ b/inspi3.html
@@ -4,9 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Inspi_3</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style3.css">
 </head>
 <body>
     
+<div id="container">
+
+<div class="a">
+
+    <p>A</p>
+
+</div>
+
+
+<div class="b">
+
+    <p>B</p>
+    
+</div>
+
+
+<div class="c">
+
+    <p>C</p>
+
+</div>
+
+
+<div class="d">
+
+    <p>D</p>
+
+</div>
+
+
+</div>
+
+
 </body>
 </html>
